# ursa

apps/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
apps/android/ChatApp/: build.gradle
apps/android/ChatApp/src/main/: AndroidManifest.xml
apps/android/ChatApp/src/main/assets/models/llama3_2_3b/: genie-config.json
apps/android/ChatApp/src/main/cpp/: CMakeLists.txt  PromptHandler.cpp  TFLiteEngineJNI.cpp
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/: MainActivity.kt  MainViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/constants/: Constants.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/data/whisper/asr/: BackgroundRecorder.java  IRecorderListener.java  IWhisperListener.java  Recorder.java  Whisper.java
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/data/whisper/engine/: IWhisperEngine.java  WhisperEngine.java  WhisperEngineNative.java
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/data/whisper/utils/: WaveUtil.java  WhisperUtil.java
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/helpers/: AudioPlayer.kt  BaseApplication.kt  PermissionHandlerActivity.kt  PermissionRequestActivity.kt  RoverAPIService.kt  RoverListener.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/models/: GPTModel.kt  Prompt.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/permission/: PermissionCheck.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/services/: AudioService.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/: NavRoute.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/common/: AppBar.kt  AppDrawer.kt  AppScaffold.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/advance/: Advance.kt  AdvanceViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/controller/: Controller.kt  ControllerViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/occupancy/: Occupancy.kt  OccupancyViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/prompt/: PromptSettingPage.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/rover/: RoverSettings.kt  RoverSettingsViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/settings/telemetry/: Telemetry.kt  TelemetryViewModel.kt
apps/android/ChatApp/src/main/java/com/chatgptlite/wanted/ui/theme/: Color.kt  Theme.kt
apps/android/ChatApp/src/main/java/com/quicinc/chatapp/: ChatBackend.java  GenieWrapper.java  MessageSender.java
apps/android/ChatApp/src/main/res/values/: strings.xml
apps/android/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
